# voice-changer

./: CMakeLists.txt  LICENSE  build.sh
src/: main.cpp  utils.h
src/audio/: AudioInterface.cpp  AudioInterface.h  implementation.cpp
src/gui/: MainWindow.cpp  MainWindow.h
src/vc/: VoiceChanger.cpp  VoiceChanger.h  VoiceChangerConfig.h
src/vc/FFT/: FFT.cpp  FFT.h
src/vc/GlottalSource/: LF.h  Pitch.cpp  Pitch.h  Pitch_MPM.cpp  Pitch_SWIPE.cpp  Rd2tetpta.cpp  Rd_msp.cpp  lfEpsAlpha.cpp  lfGfmSpec.cpp  lfSynth.cpp  lfSynthFrame.cpp
src/vc/GlottalSource/EKF/: EKF.h  model.cpp  optimise_Tp.cpp  optimise_alpha.cpp  optimise_epsilon.cpp
src/vc/GlottalSource/REAPER/: REAPER.cc  REAPER.h
src/vc/GlottalSource/REAPER/core/: track.cc
src/vc/IAIF/: IAIF.cpp  IAIF.h
src/vc/LPC/: LPC.cpp  LPC.h  LPC_residual.cpp
src/vc/PitchShift/: PS.cpp  PS.h
src/vc/Signal/: Filter.cpp  Filter.h  Resample.cpp  Resample.h  Window.h
src/vc/Sinusoidal/: Sin.h  Sin_analysis.cpp  Sin_shm.cpp
